トップで写真を並べる

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,11 +1,15 @@
-<article>
-  <header class="summary-header">
-    <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-    <p><small>published: {{ .PublishDate.Format "2006-01-02" }}</small></p>
-  </header>
-  <p>{{- .Summary -}}</p>
-  <p></p>
-  <p>
-    <small><a href="{{ .RelPermalink }}">{{ site.Param "readMoreText" | default "more" }}</a></small>
-  </p>
-</article>
+{{- $eyecatch_image := findRE "<img.*?src=([^>]*)?>" .Content 1 -}}
+{{ if $eyecatch_image }}
+  <article class="photo-frame">
+    <a class="photo" href="{{ .RelPermalink }}">
+      <header
+        class="photo-header {{ .Params.theme|default "light" }}"
+        style="{{ range $key, $value := .Params.styles -}}{{ $key }}:{{ $value }};{{- end }}"
+      >
+        <h2>{{ .Title }}</h2>
+        <p class="published">{{ .PublishDate.Format "2006-01-02" }}&nbsp;</p>
+      </header>
+      {{- range $eyecatch_image }}{{ . | safeHTML }}{{- end -}}</a
+    >
+  </article>
+{{ end }}
