--- a/layouts/shortcodes/photo.html
+++ b/layouts/shortcodes/photo.html
@@ -1,13 +1,13 @@
 {{- $src := .Get "src" -}}
 {{- $alt := .Get "alt" -}}
-{{- $img := .Page.Resources.GetMatch $src -}}
+{{- $img := resources.Get $src -}}
 {{- $srcset := slice -}}
 {{- with $.Site.Param "photo.sizes" }}
   {{- range $size := . -}}
     {{- $r_img := $img.Resize (printf "%dx Lanczos" $size) -}}
     {{- $r_src := printf "%s %dw" $r_img.RelPermalink $size -}}
     {{- $srcset = $srcset | append $r_src -}}
-  {{- end -}}"
+  {{- end -}}
 {{- end -}}
 
 
